# src/controller/messageController.js
@@ -8,11 +8,12 @@ const getMessages = async (req, res) => {
     #swagger.description = 'Endpoint para enviar todos los mensajes del foro'
     */
     
-    const messages = await Message.find({})
-
-    return res
-        .status(200)
-        .json({messages})
+    const messages = await Message.find({}).populate([
+        { path: 'userId', select: '_id username' }
+      ])
+      .then((messages) => {
+        return res.status(200).json({ messages});
+      });
 
     /* #swagger.responses[200] = { 
                schema: { messages: 'array' },
@@ -27,13 +28,13 @@ const addMessage = async (req, res) => {
     #swagger.tags = ['Message']
     #swagger.description = 'Endpoint para agregar un nuevo mensaje al foro'
     */
-    const { content, userId } = req.body 
+    const { message, userId } = req.body 
 
-    const message = await Message.create({ content, userId })
+    const savedMessage = await Message.create({ content: message, userId: userId })
 
     return res
         .status(200)
-        .json({message})
+        .json({savedMessage})
 
     /* #swagger.responses[200] = { 
                schema: { message: 'string' },
@@ -46,9 +47,11 @@ const updateMessage = async (req, res) => {
     #swagger.tags = ['Message']
     #swagger.description = 'Endpoint para actualizar un mensaje del foro'
     */
-    const { id, content } = req.body 
+    const { id, content } = req.params 
 
-    const message = await Message.findByIdAndRemove(id, { content })
+    console.log(req.params, req.body, req.headers)
+
+    const message = await Message.findByIdAndUpdate(id, { content })
 
     return res
         .status(200)
@@ -64,7 +67,7 @@ const deleteMessage = async(req, res) => {
     #swagger.tags = ['Message']
     #swagger.description = 'Endpoint para actualizar un mensaje del foro'
     */
-    const { id } = req.body
+    const { id } = req.params
 
     const message = await Message.deleteOne({_id: id})
 
