# src/swagger_output.json
@@ -54,6 +54,7 @@
         ],
         "responses": {
           "200": {
+            "description": "Lista de mensajes del foro",
             "schema": {
               "type": "object",
               "properties": {
@@ -65,8 +66,7 @@
               "xml": {
                 "name": "main"
               }
-            },
-            "description": "Lista de mensajes del foro"
+            }
           },
           "401": {
             "description": "Unauthorized"
@@ -90,7 +90,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "content": {
+                "message": {
                   "example": "any"
                 },
                 "userId": {
@@ -102,6 +102,42 @@
         ],
         "responses": {
           "200": {
+            "description": "Mensaje nuevo",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Endpoint para actualizar un mensaje del foro",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
             "schema": {
               "type": "object",
               "properties": {
@@ -114,7 +150,7 @@
                 "name": "main"
               }
             },
-            "description": "Mensaje nuevo"
+            "description": "Mensaje actualizado"
           },
           "401": {
             "description": "Unauthorized"
@@ -178,7 +214,7 @@
       }
     },
     "/token": {
-      "get": {
+      "post": {
         "tags": [
           "Auth"
         ],
@@ -188,6 +224,18 @@
             "name": "Authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -213,60 +261,6 @@
       }
     },
     "/{id}": {
-      "put": {
-        "tags": [
-          "Message"
-        ],
-        "description": "Endpoint para actualizar un mensaje del foro",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "example": "any"
-                },
-                "content": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string",
-                  "example": "string"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            },
-            "description": "Mensaje actualizado"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
       "delete": {
         "tags": [
           "Message"
@@ -283,22 +277,11 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
           "200": {
+            "description": "Mensaje eliminado",
             "schema": {
               "type": "object",
               "properties": {
@@ -310,8 +293,7 @@
               "xml": {
                 "name": "main"
               }
-            },
-            "description": "Mensaje eliminado"
+            }
           },
           "401": {
             "description": "Unauthorized"
